--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "daisyui": "^3.1.0",
         "flowbite": "^1.6.5",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.23",
