--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^1.13.6",
+        "tw-elements": "^1.0.0"
     }
 }
